16.0.0
------
* Moved Discord client code into project

15.1.0
------
* Added phrase lookup to Discord bot
* Reduced precedence of split-stroke rules

15.0.2
------
* Fixed Plover plugin activation and shortcut
* Updated Discord bot dependency

15.0.1
------
* Fixed object tree icons

15.0.0
------
* Code has fewer implicit dependencies (especially in the GUI)
* Configuration is now easier to maintain

14.2.3
------
* Added arrow-delimited queries to Discord bot
* Python console exceptions are handled better

14.2.2
------
* Thread handling is simplified
* Python console code is more robust

14.2.1
------
* Chain links may now connect any number of shapes
* JSON schema is now more explicit

14.2.0
------
* Simplified rules format to just an array of strings
* Added more key shapes to board engine
* Fixed disassembler in object tree dialog

14.1.0
------
* Text is allowed in more places on board diagrams.

14.0.0
------
* Main software components are now loaded only on demand
* Sentinel keys no longer appear as actual search results
* Board diagrams may now have chains connecting any number of keys

13.1.0
------
* Stack traces are now hidden from the user
* Exceptions no longer permanently disable the worker thread

13.0.0
-----
* GUI logic for REST queries has been moved to its own module
* Board diagrams are now rearranged when the GUI is resized
* I/O code has been consolidated

12.2.1
-----
* Qt GUI code is further restructured
* Fixed config editor

12.2.0
-----
* Internal Qt GUI code is restructured
* Board diagram panel now expands when the GUI is resized
* Board diagrams may now be saved in PNG format
* Board diagrams may now be copied directly to the clipboard

12.1.0
-----
* Board diagrams are now more correct (and colorful)
* Board diagrams may now be saved to SVG files via the main GUI
* Rules involving briefs are given more weight

12.0.0
-----
* Added more aliases for steno key combinations
* Improved usability of the core API